--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
+    implementation "org.projectlombok:lombok"
+    annotationProcessor "org.projectlombok:lombok"
+    implementation "org.apache.commons:commons-lang3"
 }
 
 test {
