--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
     implementation "org.projectlombok:lombok"
     annotationProcessor "org.projectlombok:lombok"
     implementation "org.apache.commons:commons-lang3"
+    implementation "org.mapstruct:mapstruct:1.5.5.Final"
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
 }
 
 test {
