Добавил библиотеку логгирования

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    maven {
+        url = uri("https://raw.githubusercontent.com/yrcnbt/logging-starter/master/maven-repo/ru/danilenkoya/logging-starter-gradle")
+    }
 }
 
 dependencies {
@@ -18,9 +22,12 @@ dependencies {
     implementation "org.apache.commons:commons-lang3"
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
+    implementation "ru.danilenkoya:logging-starter-maven:1.0-SNAPSHOT"
+  //  implementation "ru.danilenkoya:logging-starter-maven:1.0-SNAPSHOT"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.junit.jupiter:junit-jupiter-api"
 }
+
 
 test {
     useJUnitPlatform()
