--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
     implementation "ru.danilenkoya:logging-starter-maven:1.0-SNAPSHOT"
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
   //  implementation "ru.danilenkoya:logging-starter-maven:1.0-SNAPSHOT"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.junit.jupiter:junit-jupiter-api"
